--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "antd": "^5.20.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
+    },
+    "engines": {
+        "node": "18.x"
     }
 }
